# UMatcher

./: .gitignore  README.md  umatcher_env.yml
configs/: config.yaml
data/: classfication_dataset.json
data/umatcher_ncnn/: search_branch.ncnn.param  template_branch.ncnn.param
data/umatcher_onnx/: template_branch.onnx
data/umatcher_rknn/: template_branch.rknn
demo/umatcher_ncnn/: CMakeLists.txt
demo/umatcher_ncnn/inc/: udetector.h  umatcher.h  utracker.h
demo/umatcher_ncnn/src/: center_crop.cpp  detector_demo.cpp  tracker_demo.cpp  udetector.cpp  umatcher.cpp  utracker.cpp
demo/umatcher_rknn/: CMakeLists.txt
demo/umatcher_rknn/inc/: center_crop.h  udetector.h  umatcher.h  utracker.h
demo/umatcher_rknn/src/: debug_matcher.cpp  detector_demo.cpp  tracker_demo.cpp  udetector.cpp  umatcher.cpp  utracker.cpp
lib/dataset/: COCO.py  MultiDatasetFusion.py  SA1B.py  StandardDataset.py
lib/detector/: udetector.py
lib/model/: autoencoder.py  head.py  init_weights.py  matcher.py  mobileone.py  search_branch.py  template_branch.py  unet.py
lib/tracker/: utracker.py  utracker_bak.py
lib/trainers/: distributed_trainer.py  loader.py  multi_gpu_train_matcher.py  standard_trainer.py
lib/utils/: box_ops.py  heatmap_util.py  imgproc.py
scripts/: classification_example.py  detection_example.py  export_onnx.py  tracking_example.py  train_matcher.py
